<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    android:padding="0dp">


    <ImageView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header_sin_usuario" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/btnZonaLima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bordes_redondeados"
                android:text="@string/zonaLima"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnZonaSur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bordes_redondeados"
                android:text="@string/zonaSur"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnZonaCentro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bordes_redondeados"
                android:text="@string/zonaCentro"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnZonaNorte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bordes_redondeados"
                android:text="@string/zonaNorte"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentCines"
            android:name="idat.dami.chinestarapp.ViewCine.FragmentZonaLima"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/idInicio"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:onClick="irAInicio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_dos" />

            <ImageView
                android:id="@+id/idCines"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/idInicio"
                app:srcCompat="@drawable/ic_baseline_location_on_24" />

            <ImageView
                android:id="@+id/idConfiteria"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:onClick="irAConfiteria"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/idCines"
                app:srcCompat="@drawable/ic_cinco" />

            <ImageView
                android:id="@+id/idFormatos"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:onClick="irFormatos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/idConfiteria"
                app:srcCompat="@drawable/ic_uno" />

            <ImageView
                android:id="@+id/idPromociones"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:onClick="irAPromociones"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/idFormatos"
                app:srcCompat="@drawable/ic_tres" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>