<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/fondo_login"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="721dp"
        android:layout_gravity="center_vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="240dp"
            android:paddingRight="30dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Botones -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Título y Cajas de Texto [usuario, password] -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/login_titulo"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textColor="@color/red"
                            android:textSize="25dp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/edUsuario"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/usuario"
                            android:paddingTop="15dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/white"
                                android:imeOptions="actionNext"
                                android:inputType="textEmailAddress"
                                android:typeface="sans" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/edPassword"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:paddingTop="10dp"
                            app:endIconMode="password_toggle">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/white"
                                android:imeOptions="actionNext"
                                android:inputType="textPassword"
                                android:typeface="sans" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnIngresar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:onClick="validarAcceso"
                            android:text="@string/btn_ingresar" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnRegistro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:onClick="registro"
                            android:text="registro" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_margin="3dp"
                        android:orientation="horizontal"
                        android:paddingTop="5dp">


                        <ImageView
                            android:id="@+id/btnInstagram"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_instagram" />

                        <ImageView
                            android:id="@+id/btnTwitter"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_twitter" />

                        <ImageView
                            android:id="@+id/btnFacebook"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_facebook" />
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </ScrollView>


</LinearLayout>
